[package]
name = "wasm-cube"
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["console_error_panic_hook"]

[dependencies]
nalgebra = "0.33.2"

console_error_panic_hook = { version = "0.1.7", optional = true }

js-sys = "0.3.27"
wasm-bindgen = "0.2.84"
wasm-bindgen-futures = "^0.4.45"

# The `web-sys` crate allows you to interact with the various browser APIs, like the DOM.
[dependencies.web-sys]
version = "0.3.22"
features = ["console", "Window"]

[profile.release]
# Tell `rustc` to optimize for small code size.
opt-level = "s"
